--- a/笔记.md
+++ b/笔记.md
@@ -120,6 +120,21 @@
 ```
 创建后缀类型为.jsx的文件,就可以有语法提示
 
+**组件的种类**
+- function构造函数创建的组件
+使用function构造函数创建的组件,内部没有state私有数据,只有一个props来接收外界传递过来的数据
+
+- class关键字创建的组件
+使用class关键字创建的组件,内部除了有`this.props`这个`只读属性`之外,还有一个专门用于存放
+自己私有数据的`this.state`属性,这个state属性是`可读可写`的
+
+🐳 使用function创建的组件,叫做`无状态组件`;使用class创建的组件,叫做`有状态组件`
+💧有状态组件和无状态组件最本质的区别就是有无state属性;同时使用class创建的组件,有自己的声明周期函数
+💧但是使用function创建的组件,没有自己的声明周期函数
+
+**什么时候使用有状态组件,什么时候使用无状态组件**
+- 如果一个组件需要存放自己的私有数据,或者需要在组件的不同阶段执行不同的业务逻辑,这个时候适合用class创建出来的有状态组件
+- 如果一个组件只需要根据外界传递过来的props,渲染固定的页面结构的话,这个时候适合使用function创建出来的无状态组件;(使用无状态组件的好处:由于剔除了组件的生命周期,所以运行速度会相对的快一些)
 
 
 
